--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -182,3 +182,25 @@
   font-weight: 300;
   line-height: 1.5;
 }
+
+@media (max-width:600px) {
+    .main-bottom input{
+        flex: none;
+        width: 150px;
+    }
+    .main-bottom img{
+        width: 20px;
+    }
+    .search-box {
+        padding: 5px 10px;
+    }
+    .search-box div{
+        gap: 5px;
+    }
+    .main .cards{
+        display: none;
+    }
+    .result-data {
+        margin-bottom: 30px;
+    }
+}
