--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,14 @@
 #root {
   height: 100vh;
   display: flex;
+  animation: fadeIn 1s;
+}
+
+@keyframes fadeIn {
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
 }
